--- a/src/main/asciidoc/js/http.adoc
+++ b/src/main/asciidoc/js/http.adoc
@@ -1534,6 +1534,90 @@ You can retrieve the list of cookies from a response using `link:../../jsdoc/mod
 
 Alternatively you can just parse the `Set-Cookie` headers yourself in the response.
 
+==== 30x redirection handling
+
+The client can be configured to follow HTTP redirections: when the client receives an
+`301`, `302`, `303` or `307` status code, it follows the redirection provided by the `Location` response header
+and the response handler is passed the redirected response instead of the original response.
+
+Here’s an example:
+
+[source,js]
+----
+
+client.get("some-uri", function (response) {
+  console.log("Received response with status code " + response.statusCode());
+}).setFollowRedirects(true).end();
+
+----
+
+The redirection policy is as follow
+
+* on a `301`, `302` or `303` status code, follow the redirection with a `GET` method
+* on a `307` status code, follow the redirection with the same HTTP method and the cached body
+
+WARNING: following redirections caches the request body
+
+The maximum redirects is `16` by default and can be changed with `link:../dataobjects.html#HttpClientOptions#setMaxRedirects[maxRedirects]`.
+
+[source,js]
+----
+
+var client = vertx.createHttpClient({
+  "maxRedirects" : 32
+});
+
+client.get("some-uri", function (response) {
+  console.log("Received response with status code " + response.statusCode());
+}).setFollowRedirects(true).end();
+
+----
+
+One size does not fit all and the default redirection policy may not be adapted to your needs.
+
+The default redirection policy can changed with a custom implementation:
+
+[source,js]
+----
+var Future = require("vertx-js/future");
+var resolveURI = function(base, uriRef) {
+  throw "an error occured";
+};
+
+client.redirectHandler(function (response) {
+
+  // Only follow 301 code
+  if (response.statusCode() === 301 && (response.getHeader("Location") !== null && response.getHeader("Location") !== undefined)) {
+
+    // Compute the redirect URI
+    var absoluteURI = resolveURI(response.request().absoluteURI(), response.getHeader("Location"));
+
+    // Create a new ready to use request that the client will use
+    return Future.succeededFuture(client.getAbs(absoluteURI))
+  }
+
+  // We don't redirect
+  return null
+});
+
+----
+
+The policy handles the original `link:../../jsdoc/module-vertx-js_http_client_response-HttpClientResponse.html[HttpClientResponse]` received and returns either `null`
+or a `Future<HttpClientRequest>`.
+
+- when `null` is returned, the original response is processed
+- when a future is returned, the request will be sent on its successful completion
+- when a future is returned, the exception handler set on the request is called on its failure
+
+The returned request must be unsent so the original request handlers can be sent and the client can send it after.
+
+Most of the original request settings will be propagated to the new request:
+
+* request headers, unless if you have set some headers (including `link:../../jsdoc/module-vertx-js_http_client_request-HttpClientRequest.html#setHost[setHost]`)
+* request body unless the returned request uses a `GET` method
+* response handler
+* request exception handler
+* request timeout
 
 ==== 100-Continue handling
 
@@ -2077,6 +2161,34 @@ server on your multi-core machine.
 Vert.x http servers and clients can be configured to use HTTPS in exactly the same way as net servers.
 
 Please see <<ssl, configuring net servers to use SSL>> for more information.
+
+SSL can also be enabled/disabled per request with `link:../dataobjects.html#RequestOptions[RequestOptions]` or when
+specifying a scheme with `link:../../jsdoc/module-vertx-js_http_client-HttpClient.html#requestAbs[requestAbs]`
+method.
+
+[source,js]
+----
+client.getNow({
+  "host" : "localhost",
+  "port" : 8080,
+  "uRI" : "/",
+  "ssl" : true
+}, function (response) {
+  console.log("Received response with status code " + response.statusCode());
+});
+
+----
+
+The `link:../dataobjects.html#HttpClientOptions#setSsl[ssl]` setting acts as the default client setting.
+
+The `link:../dataobjects.html#RequestOptions#setSsl[ssl]` overrides the default client setting
+
+* setting the value to `false` will disable SSL/TLS even if the client is configured to use SSL/TLS
+* setting the value to `true` will enable SSL/TLS  even if the client is configured to not use SSL/TLS, the actual
+client SSL/TLS (such as trust, key/certificate, ciphers, ALPN, ...) will be reused
+
+Likewise `link:../../jsdoc/module-vertx-js_http_client-HttpClient.html#requestAbs[requestAbs]` scheme
+also overrides the default client setting.
 
 === WebSockets
 
