--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -423,21 +423,7 @@ name. When using network activity logging there are a few things to keep in mind
 - logging is not performed by Vert.x logging but by Netty
 - this is *not* a production feature
 
-Netty will try to locate the following logger implementations, in the following order:
-
-- Slf4j
-- Log4j
-- JDK
-
-The presense of the slf4j or log4j classes on the classpath is enough to pick up the logging implementation.
-
-The logger implementation can be forced to a specific implementation by setting Netty's internal logger implementation directly:
-
-[source,java]
-----
-// Force logging to Log4j
-InternalLoggerFactory.setDefaultFactory(Log4JLoggerFactory.INSTANCE);
-----
+You should read the <<netty-logging>> section.
 
 [[ssl]]
 === Configuring servers and clients to work with SSL/TLS
@@ -926,6 +912,78 @@ var client = vertx.createNetClient(options);
 ----
 
 Keep in mind that pem configuration, the private key is not crypted.
+
+==== Self-signed certificates for testing and development purposes
+
+CAUTION: Do not use this in production settings, and note that the generated keys are very insecure.
+
+It is very often the case that self-signed certificates are required, be it for unit / integration tests or for
+running a development version of an application.
+
+`link:../../jsdoc/module-vertx-js_self_signed_certificate-SelfSignedCertificate.html[SelfSignedCertificate]` can be used to provide self-signed PEM certificate helpers and
+give `KeyCertOptions` and `TrustOptions` configurations:
+
+[source,js]
+----
+var SelfSignedCertificate = require("vertx-js/self_signed_certificate");
+var certificate = SelfSignedCertificate.create();
+
+var serverOptions = {
+  "ssl" : true,
+  "keyCertOptions" : certificate.keyCertOptions(),
+  "trustOptions" : certificate.trustOptions()
+};
+
+var server = vertx.createNetServer(serverOptions).connectHandler(function (socket) {
+  socket.write("Hello!").end();
+}).listen(1234, "localhost");
+
+var clientOptions = {
+  "ssl" : true,
+  "keyCertOptions" : certificate.keyCertOptions(),
+  "trustOptions" : certificate.trustOptions()
+};
+
+var client = vertx.createNetClient(clientOptions);
+client.connect(1234, "localhost", function (ar, ar_err) {
+  if (ar_err == null) {
+    ar.handler(function (buffer) {
+      console.log(buffer);
+    });
+  } else {
+    console.error("Woops: " + ar_err.getMessage());
+  }
+});
+
+----
+
+The client can also be configured to trust all certificates:
+
+[source,js]
+----
+var clientOptions = {
+  "ssl" : true,
+  "trustAll" : true
+};
+
+----
+
+Note that self-signed certificates also work for other TCP protocols like HTTPS:
+
+[source,js]
+----
+var SelfSignedCertificate = require("vertx-js/self_signed_certificate");
+var certificate = SelfSignedCertificate.create();
+
+vertx.createHttpServer({
+  "ssl" : true,
+  "keyCertOptions" : certificate.keyCertOptions(),
+  "trustOptions" : certificate.trustOptions()
+}).requestHandler(function (req) {
+  req.response().end("Hello!");
+}).listen(8080);
+
+----
 
 ==== Revoking certificate authorities
 
