--- a/src/main/asciidoc/js/http.adoc
+++ b/src/main/asciidoc/js/http.adoc
@@ -1540,7 +1540,7 @@ The client can be configured to follow HTTP redirections: when the client receiv
 `301`, `302`, `303` or `307` status code, it follows the redirection provided by the `Location` response header
 and the response handler is passed the redirected response instead of the original response.
 
-Here’s an example:
+Here's an example:
 
 [source,js]
 ----
@@ -2187,6 +2187,12 @@ client SSL/TLS (such as trust, key/certificate, ciphers, ALPN, ...) will be reus
 Likewise `link:../../jsdoc/module-vertx-js_http_client-HttpClient.html#requestAbs[requestAbs]` scheme
 also overrides the default client setting.
 
+==== Server Name Indication (SNI)
+
+Vert.x http servers can be configured to use SNI in exactly the same way as net.adoc.
+
+Vert.x http client will present the actual hostname as _server name_ during the TLS handshake.
+
 === WebSockets
 
 http://en.wikipedia.org/wiki/WebSocket[WebSockets] are a web technology that allows a full duplex socket-like
@@ -2439,6 +2445,30 @@ var client = vertx.createHttpClient(options);
 
 The DNS resolution is always done on the proxy server, to achieve the functionality of a SOCKS4 client, it is necessary
 to resolve the DNS address locally.
+
+==== Handling of other protocols
+
+The HTTP proxy implementation supports getting ftp:// urls if the proxy supports
+that, which isn't available in non-proxy getAbs requests.
+
+[source,js]
+----
+
+var options = {
+  "proxyOptions" : {
+    "type" : "HTTP"
+  }
+};
+var client = vertx.createHttpClient(options);
+client.getAbs("ftp://ftp.gnu.org/gnu/", function (response) {
+  console.log("Received response with status code " + response.statusCode());
+});
+
+
+----
+
+Support for other protocols is not available since java.net.URL does not
+support them (gopher:// for example).
 
 === Automatic clean-up in verticles
 
