--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -1101,10 +1101,90 @@ options = {
 
 ----
 
-==== Application-Layer Protocol Negotiation
+==== Server Name Indication (SNI)
 
-ALPN is a TLS extension for applicationl layer protocol negotitation. It is used by HTTP/2: during the TLS handshake
-the client gives the list of application protocols it accepts and the server responds with a protocol it supports.
+Server Name Indication (SNI) is a TLS extension by which a client specifies an hostname attempting to connect: during
+the TLS handshake the clients gives a server name and the server can use it to respond with a specific certificate
+for this server name instead of the default deployed certificate.
+
+When SNI is active the server uses
+
+* the certificate CN or SAN DNS (Subject Alternative Name with DNS) to do an exact match, e.g `www.example.com`
+* the certificate CN or SAN DNS certificate to match a wildcard name, e.g `*.example.com`
+* otherwise the first certificate when the client does not present a server name or the presenter server name cannot be matched
+
+You can enable SNI on the server by setting `link:../dataobjects.html#NetServerOptions#setSni[sni]` to `true` and
+configured the server with multiple key/certificate pairs.
+
+Java KeyStore files or PKCS12 files can store multiple key/cert pairs out of the box.
+
+[source,js]
+----
+var keyCertOptions = {
+  "path" : "keystore.jks",
+  "password" : "wibble"
+};
+
+var netServer = vertx.createNetServer({
+  "keyStoreOptions" : keyCertOptions,
+  "ssl" : true,
+  "sni" : true
+});
+
+----
+
+`link:../dataobjects.html#PemKeyCertOptions[PemKeyCertOptions]` can be configured to hold multiple entries:
+
+[source,js]
+----
+var keyCertOptions = {
+  "keyPaths" : ["default-key.pem", "host1-key.pem", "etc..."],
+  "certPaths" : ["default-cert.pem", "host2-key.pem", "etc..."]
+};
+
+var netServer = vertx.createNetServer({
+  "pemKeyCertOptions" : keyCertOptions,
+  "ssl" : true,
+  "sni" : true
+});
+
+----
+
+The client implicitly sends the connecting host as an SNI server name for Fully Qualified Domain Name (FQDN).
+
+You can provide an explicit server name when connecting a socket
+
+[source,js]
+----
+
+var client = vertx.createNetClient({
+  "trustStoreOptions" : trustOptions,
+  "ssl" : true
+});
+
+// Connect to 'localhost' and present 'server.name' server name
+client.connect(1234, "localhost", "server.name", function (res, res_err) {
+  if (res_err == null) {
+    console.log("Connected!");
+    var socket = res;
+  } else {
+    console.log("Failed to connect: " + res_err.getMessage());
+  }
+});
+
+----
+
+It can be used for different purposes:
+
+* present a server name different than the server host
+* present a server name while connecting to an IP
+* force to present a server name when using shortname
+
+==== Application-Layer Protocol Negotiation (ALPN)
+
+Application-Layer Protocol Negotiation (ALPN) is a TLS extension for application layer protocol negotiation. It is used by
+HTTP/2: during the TLS handshake the client gives the list of application protocols it accepts and the server responds
+with a protocol it supports.
 
 Java 8 does not supports ALPN out of the box, so ALPN should be enabled by other means:
 
