--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -178,6 +178,10 @@ socket.closeHandler(function (v) {
 You can set an `link:../../jsdoc/module-vertx-js_net_socket-NetSocket.html#exceptionHandler[exceptionHandler]` to receive any
 exceptions that happen on the socket.
 
+You can set an `link:../../jsdoc/module-vertx-js_net_server-NetServer.html#exceptionHandler[exceptionHandler]` to receive any
+exceptions that happens before the connection is passed to the `link:../../jsdoc/module-vertx-js_net_server-NetServer.html#connectHandler[connectHandler]`
+, e.g during the TLS handshake.
+
 === Event bus write handler
 
 Every socket automatically registers a handler on the event bus, and when any buffers are received in this handler,
@@ -1187,6 +1191,8 @@ It can be used for different purposes:
 Application-Layer Protocol Negotiation (ALPN) is a TLS extension for application layer protocol negotiation. It is used by
 HTTP/2: during the TLS handshake the client gives the list of application protocols it accepts and the server responds
 with a protocol it supports.
+
+If you are using Java 9, you are fine and you can use HTTP/2 out of the box without extra steps.
 
 Java 8 does not supports ALPN out of the box, so ALPN should be enabled by other means:
 
