--- a/src/main/asciidoc/js/net.adoc
+++ b/src/main/asciidoc/js/net.adoc
@@ -1056,16 +1056,7 @@ configured by explicitly adding enabled protocols:
 
 [source,js]
 ----
-var options = {
-  "ssl" : true,
-  "keyStoreOptions" : keyStoreOptions,
-  "enabledSecureTransportProtocols" : [
-    "TLSv1.1",
-    "TLSv1.2"
-  ]
-};
-var server = vertx.createNetServer(options);
-
+Code not translatable
 ----
 
 Protocol versions can be specified on the `link:../dataobjects.html#NetServerOptions[NetServerOptions]` or `link:../dataobjects.html#NetClientOptions[NetClientOptions]` configuration.
@@ -1109,15 +1100,24 @@ options = {
 
 ==== Server Name Indication (SNI)
 
-Server Name Indication (SNI) is a TLS extension by which a client specifies an hostname attempting to connect: during
-the TLS handshake the clients gives a server name and the server can use it to respond with a specific certificate
+Server Name Indication (SNI) is a TLS extension by which a client specifies a hostname attempting to connect: during
+the TLS handshake the client gives a server name and the server can use it to respond with a specific certificate
 for this server name instead of the default deployed certificate.
+If the server requires client authentication the server can use a specific trusted CA certificate depending on the
+indicated server name.
 
 When SNI is active the server uses
 
 * the certificate CN or SAN DNS (Subject Alternative Name with DNS) to do an exact match, e.g `www.example.com`
 * the certificate CN or SAN DNS certificate to match a wildcard name, e.g `*.example.com`
-* otherwise the first certificate when the client does not present a server name or the presenter server name cannot be matched
+* otherwise the first certificate when the client does not present a server name or the presented server name cannot be matched
+
+When the server additionally requires client authentication:
+
+* if `link:../dataobjects.html#JksOptions[JksOptions]` were used to set the trust options
+ (`link:../dataobjects.html#NetServerOptions#setTrustOptions[options]`) then an exact match with the trust store
+ alias is done
+* otherwise the available CA certificates are used in the same way as if no SNI is in place
 
 You can enable SNI on the server by setting `link:../dataobjects.html#NetServerOptions#setSni[sni]` to `true` and
 configured the server with multiple key/certificate pairs.
