--- a/src/main/asciidoc/js/parsetools.adoc
+++ b/src/main/asciidoc/js/parsetools.adoc
@@ -150,4 +150,9 @@ parser.exceptionHandler(function (err) {
 
 ----
 
+The parser also parses json streams:
+
+- concatenated json streams: `{"temperature":30}{"temperature":50}`
+- line delimited json streams: `{"an":"object"}\r\n3\r\n"a string"\r\nnull`
+
 For more details, check out the `link:../../jsdoc/module-vertx-js_json_parser-JsonParser.html[JsonParser]` class.
