--- a/src/main/asciidoc/js/shareddata.adoc
+++ b/src/main/asciidoc/js/shareddata.adoc
@@ -3,8 +3,12 @@
 Shared data contains functionality that allows you to safely share data between different parts of your application,
 or different applications in the same Vert.x instance or across a cluster of Vert.x instances.
 
-Shared data includes local shared maps, distributed, cluster-wide maps, asynchronous cluster-wide locks and
-asynchronous cluster-wide counters.
+Shared data provides:
+
+ * synchronous shared maps (local)
+ * asynchronous maps (local or cluster-wide)
+ * asynchronous locks (local or cluster-wide)
+ * asynchronous counters (local or cluster-wide)
 
 IMPORTANT: The behavior of the distributed data structure depends on the cluster manager you use. Backup
 (replication) and behavior when a network partition is faced are defined by the cluster manager and its
@@ -50,16 +54,19 @@ var buff = map2.get("eek");
 
 ----
 
-=== Cluster-wide asynchronous maps
+=== Asynchronous shared maps
 
-Cluster-wide asynchronous maps allow data to be put in the map from any node of the cluster and retrieved from any
-other node.
+Asynchronous shared maps allow data to be put in the map and retrieved locally when Vert.x is not clustered.
+When clustered, data can be put from any node and retrieved from the same node or any other node.
+
+IMPORTANT: In clustered mode, asynchronous shared maps rely on distributed data structures provided by the cluster manager.
+Beware that the latency relative to asynchronous shared map operations can be much higher in clustered than in local mode.
 
 This makes them really useful for things like storing session state in a farm of servers hosting a Vert.x web
 application.
 
 You get an instance of `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html[AsyncMap]` with
-`link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getClusterWideMap[getClusterWideMap]`.
+`link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getAsyncMap[getAsyncMap]`.
 
 Getting the map is asynchronous and the result is returned to you in the handler that you specify. Here's an example:
 
@@ -68,7 +75,7 @@ Getting the map is asynchronous and the result is returned to you in the handler
 
 var sd = vertx.sharedData();
 
-sd.getClusterWideMap("mymap", function (res, res_err) {
+sd.getAsyncMap("mymap", function (res, res_err) {
   if (res_err == null) {
     var map = res;
   } else {
@@ -126,12 +133,12 @@ You can also remove entries from an asynchronous map, clear them and get the siz
 
 See the `link:../../jsdoc/module-vertx-js_async_map-AsyncMap.html[API docs]` for more information.
 
-=== Cluster-wide locks
+=== Asynchronous locks
 
-`link:../../jsdoc/module-vertx-js_lock-Lock.html[Cluster wide locks]` allow you to obtain exclusive locks across the cluster -
+`link:../../jsdoc/module-vertx-js_lock-Lock.html[Asynchronous locks]` allow you to obtain exclusive locks locally or across the cluster -
 this is useful when you want to do something or access a resource on only one node of a cluster at any one time.
 
-Cluster wide locks have an asynchronous API unlike most lock APIs which block the calling thread until the lock
+Asynchronous locks have an asynchronous API unlike most lock APIs which block the calling thread until the lock
 is obtained.
 
 To obtain a lock use `link:../../jsdoc/module-vertx-js_shared_data-SharedData.html#getLock[getLock]`.
@@ -181,9 +188,9 @@ sd.getLockWithTimeout("mylock", 10000, function (res, res_err) {
 
 ----
 
-=== Cluster-wide counters
+=== Asynchronous counters
 
-It's often useful to maintain an atomic counter across the different nodes of your application.
+It's often useful to maintain an atomic counter locally or across the different nodes of your application.
 
 You can do this with `link:../../jsdoc/module-vertx-js_counter-Counter.html[Counter]`.
 
