--- a/vertx-lang-js/src/main/docoverride/vertx-core/override/verticle-configuration.adoc
+++ b/vertx-lang-js/src/main/docoverride/vertx-core/override/verticle-configuration.adoc
@@ -14,9 +14,7 @@ var options = {
 vertx.deployVerticle("MyOrderProcessorVerticle.js", options);
 ----
 
-This configuration is then available via the `link:../../jsdoc/module-vertx-js_context-Context.html[Context]` object.
-
-The configuration is returned as a
+This configuration is then available via the {@link io.vertx.core.Context} object. The configuration is returned as a
 JavaScript object so you can retrieve data as follows:
 
 [source,javascript]
@@ -27,8 +25,8 @@ console.log("Configuration: " + Vertx.currentContext().config().name);
 console.log("Configuration: " + vertx.getOrCreateContext().config().name);
 ----
 
-NOTE: The access to the `context` object is made either using `link:../../jsdoc/module-vertx-js_vertx-Vertx.html#currentContext[Vertx.currentContext]` or using
-`link:../../jsdoc/module-vertx-js_vertx-Vertx.html#getOrCreateContext[getOrCreateContext]`.
+NOTE: The access to the `context` object is made either using {@link io.vertx.core.Vertx#currentContext()} or using
+{@link io.vertx.core.Vertx#getOrCreateContext()}.
 
 === Accessing environment variables in a Verticle
 
