--- a/vertx-lang-js/src/main/docoverride/vertx-core/override/eventbus.adoc
+++ b/vertx-lang-js/src/main/docoverride/vertx-core/override/eventbus.adoc
@@ -1,1 +1,3 @@
-Message codecs are available exclusively with the Java API.
+==== Message Codecs
+
+Message codecs are available exclusively with the Java api.
