--- a/vertx-lang-js/src/main/docoverride/vertx-core/js/override/dependencies.adoc
+++ b/vertx-lang-js/src/main/docoverride/vertx-core/js/override/dependencies.adoc
@@ -11,8 +11,8 @@ project descriptor to access the Vert.x Core API and enable the JavaScript suppo
  <version>${maven.version}</version>
 </dependency>
 <dependency>
-  <groupId>${maven.groupId}</groupId>
-  <artifactId>${maven.artifactId}</artifactId>
+  <groupId>io.vertx</groupId>
+  <artifactId>vertx-lang-js</artifactId>
   <version>${maven.version}</version>
 </dependency>
 ----
@@ -22,7 +22,7 @@ project descriptor to access the Vert.x Core API and enable the JavaScript suppo
 [source,groovy,subs="+attributes"]
 ----
 compile "io.vertx:vertx-core:${maven.version}"
-compile "${maven.groupId}:${maven.artifactId}:${maven.version}"
+compile "io.vertx:vertx-lang-js:${maven.version}"
 ----
 
 [IMPORTANT]
