--- a/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
+++ b/vertx-lang-js/src/main/asciidoc/dataobjects.adoc
@@ -482,6 +482,26 @@ Set the write option
 +++
 |===
 
+[[CassandraClientOptions]]
+== CassandraClientOptions
+
+++++
+ Eclipse Vert.x Cassandra client options.
+++++
+'''
+
+[cols=">25%,25%,50%"]
+[frame="topbot"]
+|===
+^|Name | Type ^| Description
+|[[contactPoints]]`@contactPoints`|`Array of String`|+++
+Set a list of hosts, where some of cluster nodes is located.
++++
+|[[port]]`@port`|`Number (int)`|+++
+Set which port should be used for all the hosts to connect to a cassandra service.
++++
+|===
+
 [[Check]]
 == Check
 
@@ -3316,10 +3336,10 @@ Set whether metrics will be enabled on the Vert.x instance.
 == MicrometerMetricsOptions
 
 ++++
- Vert.x micrometer configuration.<br/>
+ Vert.x micrometer configuration.
+ <p>
  It is required to set either <code>influxDbOptions</code>, <code>prometheusOptions</code> or <code>jmxMetricsOptions</code>
- (or, programmatically, <code>micrometerRegistry</code>)
- in order to actually report metrics.
+ (or, programmatically, <code>micrometerRegistry</code>) in order to actually report metrics.
 ++++
 '''
 
@@ -3340,6 +3360,9 @@ Set InfluxDB options.
 |[[jmxMetricsOptions]]`@jmxMetricsOptions`|`link:dataobjects.html#VertxJmxMetricsOptions[VertxJmxMetricsOptions]`|+++
 Set JMX metrics options.
  Setting a registry backend option is mandatory in order to effectively report metrics.
++++
+|[[jvmMetricsEnabled]]`@jvmMetricsEnabled`|`Boolean`|+++
+Whether JVM metrics should be collected. Defaults to <code>false</code>.
 +++
 |[[labelMatches]]`@labelMatches`|`Array of link:dataobjects.html#Match[Match]`|+++
 Set a list of rules for label matching.
